# Stanmore-stack

./: docker-compose.yml  restart-stack.sh
marshall-stanmore-2/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
marshall-stanmore-2/docs/: Makefile  conf.py  index.rst
marshall-stanmore-2/marshallstanmore2/: __init__.py  __main__.py  ble.py  exceptions.py  mqtt.py  typings.py
mosquitto/config/: mosquitto.conf
mosquitto/data/: mosquitto.db
